--- a/Relvise/css/style.css
+++ b/Relvise/css/style.css
@@ -44,10 +44,142 @@ body {
 	display: flex;
 	flex-direction: column;
 }
-/* ---------------------------------------------------------------------------- */
-._container {
+/* ---------------header------------------------------------------------------------- */
+.container {
 	max-width: 1046px;
 	padding: 0px 15px;
 	margin: 0px auto;
 	box-sizing: content-box;
+}
+._ibg {
+    position: relative;
+}
+._ibg img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+}
+.header {
+    position: absolute;
+    width: 100%;
+    left: 0;
+    top: 0;
+    z-index: 50;
+}
+.header__container {
+    display: flex;
+    min-height: 104px;
+    align-items: center;
+}
+@media (max-width: 479px){
+    .header__container {
+        min-width: 70px;
+    }
+}
+
+.header__logo {
+    font-size: 24px;
+    font-weight: 700;
+    color: inherit;
+}
+.header__menu {
+    margin: 0px 0px 0px 133px;
+}
+@media (max-width: 992px){
+    .header__menu {
+        margin: 0px 0px 0px 80px;
+    }
+}
+@media (max-width: 479px){
+    .header_menu {
+        margin: 0px 0px 0px 20px;
+    }
+}
+.menu {
+    padding: 5px 0px;
+}
+/* -flex-wrap: wrap; - даёт нам возможность ломать меню при сжимании. 
+наша верстка будет очень надёжной.Заказчик сможет добавлять контент. */
+.menu__list {
+    flex-wrap: wrap;    
+    display: flex;        
+}
+.menu__item {
+    margin: 0px 0px 0px 24px;
+}
+.menu__item:not(:last-child) {
+    margin: 0px 21px 0px 0px;
+}
+.menu__link {
+    color: #737373;
+    line-height: 171%;
+    font-weight: 600;
+}
+
+@media (max-width: 479px){
+    .menu__link {
+        font-size: 18px;
+    }
+}
+
+
+/* -------main--------------------------------------------------------------------- */
+.page{
+    flex: 1 1 auto;
+}
+
+.page__main-block {
+    
+}
+.main-block {
+    position: relative;
+}
+
+.main-block__conteiner {
+
+}
+.conteiner {
+}
+.main-block__body {
+    padding: 184px 0px 191px 0px;
+    position: relative;
+    z-index: 2;
+    max-width: 400px;
+}
+.main-block__body > *:not(:last-child) {
+    margin: 0px 0px 35px 0px;
+}
+
+
+.main-block__title {
+    font-size: 58px;
+    line-height: 137px;
+    font-weight: 800;
+}
+.main-block__text {
+    color: #737373;
+    font-size: 20px;
+    line-height: 150px;
+}
+.main-block__buttons {
+}
+.main-block__button {
+}
+.main-block__button_border {
+}
+
+.main-block__image {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
+/* -------footer--------------------------------------------------------------------- */
+.footer{
+
 }
