--- a/Relvise/css/style.css
+++ b/Relvise/css/style.css
@@ -44,7 +44,7 @@ body {
 	display: flex;
 	flex-direction: column;
 }
-/* ---------------header------------------------------------------------------------- */
+/* ---------------------------------------------------------------------------- */
 .container {
 	max-width: 1046px;
 	padding: 0px 15px;
@@ -62,6 +62,7 @@ body {
     left: 0;
     object-fit: cover;
 }
+/* ----------------------HEADER------------------------------------------------------ */
 .header {
     position: absolute;
     width: 100%;
@@ -126,9 +127,15 @@ body {
 }
 
 
-/* -------main--------------------------------------------------------------------- */
+/* -------------------------PAGE--------------------------------------------------- */
 .page{
     flex: 1 1 auto;
+}
+
+.page__services {
+    margin: -111px 0px 0px 0px;
+    position: relative;
+    z-index: 2;
 }
 
 .page__main-block {
@@ -149,6 +156,11 @@ body {
     z-index: 2;
     max-width: 400px;
 }
+@media (max-width: 992px) {
+    .main-block__body {
+        padding: 120px 0px 191px 0px;
+    }
+}
 .main-block__body > *:not(:last-child) {
     margin: 0px 0px 35px 0px;
 }
@@ -156,19 +168,61 @@ body {
 
 .main-block__title {
     font-size: 58px;
-    line-height: 137px;
+    line-height: 137%;
+    letter-spacing: 0.2px;
     font-weight: 800;
+}
+@media (max-width: 479px) {
+    .main-block__title {
+        font-size: 42px;
+    }
 }
 .main-block__text {
     color: #737373;
     font-size: 20px;
-    line-height: 150px;
+    line-height: 150%;
+}
+@media (max-width: 479px) {
+    .main-block__text {
+        color: #585757;
+    }
 }
 .main-block__buttons {
+    display: inline-flex;
+    flex-wrap: wrap;
+    margin: -10px 0;
 }
 .main-block__button {
+    border-radius: 37px;
+    display: flex;
+    min-height: 48px;
+    justify-content: center;
+    align-items: center;
+    letter-spacing: 0.2px;
+    font-weight: 700;
+    text-align: center;
+    line-height: 150%;
+    padding: 5px 36px;
+    margin: 10px 0;
+}
+@media (max-width: 479px) {
+    .main-block__button {
+        flex: 1 1 100%;
+    }
+}
+@media (min-width: 479px) {
+    .main-block__button:not(:last-child) {
+        margin-right: 10px;
+    }
+}
+
+.main-block__button_orange {
+    background: #ff7b47;
+    color: #fff;
 }
 .main-block__button_border {
+    color: #0d5c63;
+    border: 1px solid #0d5c63;
 }
 
 .main-block__image {
@@ -178,6 +232,98 @@ body {
     top: 0;
     left: 0;
 }
+
+@media (max-width: 1300px) {
+    .main-block__image img {
+        object-position: right;
+    }
+}
+@media (max-width: 992px) {
+    .main-block__image {
+        opacity: 0.5;
+    }
+}
+
+/* --------------------------services-------------------------------------------------- */
+
+.services {
+}
+.services__container {
+}
+.container {
+}
+.services__body {
+
+}
+@media (min-width: 670px) {
+    .services__body {
+        display: flex;
+        margin: 0px -15px -30px;
+        flex-wrap: wrap;
+        margin: 0px -15px;
+    }
+}
+.services__column {
+    flex: 0 1 33.333%;
+}
+
+@media (min-width: 670px) {
+    .services__column {
+        padding: 0px 15px;
+    }
+ 
+}
+@media (max-width: 992px) {
+    .services__column {
+        flex: 0 1 50%;
+    }
+    .services__column:not(:last-child) {
+        margin: 0px 0px 30px 0px;
+    }
+    .services__column:last-child {
+        flex: 1 1 100%;
+    }
+}
+
+.services__item {
+    min-width: 300px;
+    height: 100%;
+    box-shadow: 0px 13px 19px rgba(0,  0, 0, 0.07);
+    background-color: #fff;
+    padding: 35px;
+}
+@media (max-width: 479px) {
+    .services__item {
+        padding: 25px;
+    }
+}
+.item-service {
+}
+.item-service_green {
+    background-color: #0d5c63;
+}
+.item-service_green .item-service__title {
+    color: #fff;
+}
+.item-service_green .item-service__text {
+    color: #fff;
+}
+.item-service > *:not(:last-child) {
+    margin: 0px 0px 10px 0px;
+}
+.item-service__icon {
+}
+.item-service__title {
+    font-weight: 700;
+    letter-spacing: 0.1px;
+    font-size: 24px;
+    line-height: 133%;
+}
+.item-service__text {
+    color: #737373;
+    line-height: 142%;
+}
+
 
 /* -------footer--------------------------------------------------------------------- */
 .footer{
