--- a/Relvise/css/style.css
+++ b/Relvise/css/style.css
@@ -678,6 +678,7 @@ body {
     .whoweare__video:not( :last-child) {
         margin: 30px 0px 0px 0px;
     }
+}
 /* -------footer--------------------------------------------------------------------- */
 .footer{
 
