--- a/Relvise/css/style.css
+++ b/Relvise/css/style.css
@@ -146,6 +146,11 @@ body {
 }
 .page__practice {
 }
+.page__clients:not( :last-child) {
+    margin: 0px 0px 10px 0px;
+}
+.page__subscribe {
+}
 /* -------------------------header-block--------------------------------------------------- */
 .header-block {
     text-align: center;
@@ -679,7 +684,276 @@ body {
         margin: 30px 0px 0px 0px;
     }
 }
+/* --------------------------clients-------------------------------------------------- */
+
+.clients {
+    padding: 50px 0;
+}
+@media (max-width: 767px) {
+    .clients {
+        padding: 30px 0;
+    }
+    
+}
+.clieents__container {
+}
+.container {
+}
+.clients__items {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.clients__item {
+    padding: 8px 15px;
+    flex: 0 1 16.6667%;
+    text-align: center;
+    min-width: 140px;
+}
+.clients__item img {
+    max-width: 100%;
+}
+
+/* -------------------------subscribe--------------------------------------------------- */
+
+.subscribe {
+    position: relative;
+    padding: 0px 0px 20px 0px;
+}
+.subscribe::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 77px;
+    left: 0;
+    background: #252b42 ;
+}
+.subscribe__container {
+}
+.container {
+}
+.subscribe__body {
+    position: relative;
+    z-index: 2;
+    padding: 30px 50px;
+    align-items: center;
+    background-color: #17213c;
+    border-radius: 2px;
+}
+
+@media (min-width: 1070px) {
+    .subscribe__body {
+        margin: 0px 30px;
+    }
+}
+@media (min-width: 810px) {
+    .subscribe__body {
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
+.subscribe__title {
+    color: #fff;
+    
+    font-size: 133%;
+    line-height: 32px;
+    font-weight: 700;
+    letter-spacing: 0.1px;
+}
+@media (max-width: 810px) {
+    .subscribe__title {
+        margin: 0px 0px 20px 0px;
+    }
+    .subscribe__body {
+        margin: 0px -15px;
+        padding: 20px 25px;
+    }
+}
+@media (min-width: 810px) {
+    .subscribe__title {
+        max-width: 266px;
+    }
+    .subscribe__body {
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
+.subscribe__form {
+    flex: 0 1 50%;
+    display: flex;
+    align-items: center;
+}
+.subscribe__input {
+    width: 100%;
+    flex: 1 1 auto;
+    min-height: 58px;
+    background: #f9f9f9;
+    color: #737373;
+    padding: 0px 20px;
+    border: 1px solid #c6c6c6;
+    border-right: 0;
+    box-sizing: border-box;
+    border-radius: 5px 0 0 5px;
+}
+.subscribe__input:focus {
+    color: #000;
+}
+.subscribe__button {
+    background: #ff7b47;
+    border: 1px solid #c6c6c6;
+    border-radius: 0px 5px 5px 0px;
+    display: flex;
+    min-height: 58px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: #fff;
+    padding: 0px 22px;
+}
+@media (min-width: 810px){
+    .subscribe__button {
+        padding: 0px 15px;
+    }
+    .subscribe__input {
+        padding: 0px 15px;
+    }
+}
+
+/* ------------------------getintouch---------------------------------------------------- */
+
+.page__getintouch {
+}
+.getintouch {
+    padding: 80px 0px 135px 0px;
+}
+.getintouch__container {
+}
+.container {
+}
+.getintouch__header {
+    margin: 0px 0px 80px 0px;
+}
+.header-block {
+}
+.header-block__title {
+}
+.header-block__sub-title {
+}
+.getintouch__items{
+    margin: 0px -15px;
+}
+
+.getintouch__item {
+    flex: 0 1 33.333%;
+}
+.item-getintouch {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+    padding: 50px 15px;
+}
+.item-getintouch_active {
+    background: #252b42;
+    padding: 80px 15px;
+    color: #fff;
+}
+@media (max-width: 992px) {
+    
+}
+.item-getintouch_active  .item-getintouch__button {
+    border: 1px solid #fff;
+    color: #fff;
+}
+
+.item-getintouch >*:not(:last-child) {
+    margin: 0px 0px 15px 0px;
+}
+.item-getintouch__icon {
+}
+.item-getintouch__icon:not(:last-child) {
+    margin: 0px 0px 15px 0px;
+}
+.item-getintouch__emails {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.item-getintouch__email {
+    color: inherit;
+    font-weight: 600;
+    line-height: 150%;
+    font-size: 16px;
+}
+.item-getintouch__email:hover {
+    text-decoration: underline;
+}
+.item-getintouch__label {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 150%;
+}
+.item-getintouch__button {
+    border: 1px solid #ff7b47;
+    min-height: 44px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: #ff7b47;
+    line-height: 142%;
+    padding: 5px 20px;
+    font-weight: 600;
+    transition: all 0.3s ease 0s;
+    border-radius: 5px;
+}
+.item-getintouch__button:hover {
+    border: 1px solid #ff7b47;
+    background-color: #ff7b47;
+    color: #fff;
+}
+
+@media(min-width: 992px) {
+    .getintouch__items {
+        margin: 0;
+        display: flex;
+        align-items: center;
+    }
+    
+}
+@media (max-width: 992px) {
+    .getintouch {
+        padding: 50px 0px;
+    }
+    .getintouch__header {
+        margin: 0px 0px 50px 0px;
+    }
+    .item-getintouch_active {
+        padding: 50px 15px;
+    }
+}
+
+@media (max-width: 767px) {
+    .getintouch__header {
+        margin: 0px 0px 30px 0px;
+    }
+}
+
+
+/* .item-getintouch_active  .item-getintouch__button:hover {
+    background-color: #ff7b47;
+    color:#fff;
+} */
+
 /* -------footer--------------------------------------------------------------------- */
 .footer{
 
 }
+/* border: 1px solid #c6c6c6; */
