--- a/Relvise/css/style.css
+++ b/Relvise/css/style.css
@@ -151,6 +151,8 @@ body {
 }
 .page__subscribe {
 }
+.page__contact {
+}
 /* -------------------------header-block--------------------------------------------------- */
 .header-block {
     text-align: center;
@@ -952,8 +954,109 @@ body {
     color:#fff;
 } */
 
-/* -------footer--------------------------------------------------------------------- */
-.footer{
+/* -------------------------contact--------------------------------------------------- */
 
+.contact {
+    background-color: #fff;
+    padding: 42px 0;
+}
+.contact__container {
+}
+.container {
+}
+.contact__content {
+    padding: 0px 20px 20px 0px;
+}
+
+@media (min-width: 767px) {
+    .contact__body {
+        display: flex;
+        justify-content: space-between;
+    }
+    .contact__content {
+        padding: 0px 20px 0px 0px;
+    }
+}
+
+.contact__title {
+    font-weight: 700;
+    letter-spacing: 0.1px;
+    font-size: 24px;
+    line-height: 133%;
+}
+.contact__title:not(:last-child) {
+    margin: 0px 0px 10px 0px;
+}
+.contact__text {
+    color: #737373;
+    line-height: 142%;
+}
+.contact__button {
+    display: flex;
+    background: #FF7847;
+    border-radius: 5px;
+    min-height: 58px;
+    padding: 5px 40px;
+    transition: background-color 0.3s ease 0s;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: #fff;
+}
+.contact__button:hover{
+    background-color: #833518;
 }
 /* border: 1px solid #c6c6c6; */
+/* -------------------------footer--------------------------------------------------- */
+.footer {
+}
+.footer__top {
+    background: #17213c;
+    padding: 50px 0;
+}
+.footer__main {
+    display: flex;
+}
+.container {
+}
+.footer__column {
+    flex: 0 1 20%;
+    
+}
+.footer__label {
+    color: #fff;
+}
+.footer__menu {
+}
+.menu-footer {
+}
+.menu-footer__list {
+}
+.menu-footer__item {
+}
+.menu-footer__link {
+}
+.footer__contacts {
+}
+.contacts-footer {
+}
+.contacts-footer__item {
+}
+.contacts-footer__item_phone {
+}
+.contacts-footer__item_map {
+}
+.contacts-footer__item_email {
+}
+.footer__bottom {
+}
+.footer__container {
+}
+.footer__copy {
+}
+.footer__social {
+}
+.social {
+}
+.social__item {
+}
