--- a/Relvise/css/style.css
+++ b/Relvise/css/style.css
@@ -1015,16 +1015,27 @@ body {
     padding: 50px 0;
 }
 .footer__main {
+}
+
+.footer__row {
     display: flex;
+    flex-wrap: wrap;
+    margin: 0px -15px 
 }
 .container {
 }
 .footer__column {
-    flex: 0 1 20%;
+    padding: 15px 15px;
+    flex: 0 1 16.6667%;
     
 }
 .footer__label {
     color: #fff;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 150%;
+    margin: 0px 0px 20px 0px;
+    
 }
 .footer__menu {
 }
@@ -1032,31 +1043,69 @@ body {
 }
 .menu-footer__list {
 }
-.menu-footer__item {
+.contacts-footer__item:hover {
+    text-decoration: underline;
+}
+.menu-footer__item:not(:last-child) {
+    margin: 0px 0px 10px 0px;
 }
 .menu-footer__link {
+    color: #fff;
+    display: inline-block;
+    line-height: 171%;
+    letter-spacing: 0.2px;
+}
+.menu-footer__link:hover {
+    text-decoration: underline;
 }
 .footer__contacts {
 }
 .contacts-footer {
+    display: flex;
+    flex-direction: column;
 }
 .contacts-footer__item {
+    padding: 0px 0px 0px 34px;
+    line-height: 142%;
+    display: flex;
+    align-items: center;
+    color: #ffffff;
+    min-height: 30px;
+}
+.contacts-footer__item:not(:last-child) {
+    margin: 0px 0px 12px 0px;
 }
 .contacts-footer__item_phone {
+    background: url('../img/footer/icons/01.svg') 0 0 no-repeat;
 }
 .contacts-footer__item_map {
+    background: url('../img/footer/icons/02.svg') 0 0 no-repeat;
 }
 .contacts-footer__item_email {
+    background: url('../img/footer/icons/03.svg') 0 0 no-repeat;
 }
 .footer__bottom {
+    padding: 25px 0;
 }
-.footer__container {
+
+
+@media (min-width: 767px) {
+    .footer__container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
 }
 .footer__copy {
+    color: #737373;
+    line-height: 171%;
 }
 .footer__social {
 }
 .social {
+    display: flex;
+    align-items: center;
 }
-.social__item {
+.social__item:not(:last-child) {
+    margin: 0px 20px 0px 0px;
 }
